# data_science_utils

./: .gitignore  README.md  pyproject.toml
src/metric/: business_metric.py
src/metrics/: business_metric.py
src/models/: exceptions.py  model_kmeans.py  multilabel_classification.py
src/preprocessing/: encoding.py  feature_extraction.py
tests/metric/: test_business_metric.py
tests/metrics/: test_business_metric.py
tests/models/: test_model_kmeans.py  test_multilabel_classification.py
tests/preprocessing/: test_encoding.py  test_feature_extraction.py
