[tool.poetry]
name = "pauline"
version = "0.1.0"
description = "my personal code for data science"
authors = ["PaulineMCraft <pauline.martin@craft.ai>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.5"
scikit-learn = "^0.23.1"
numpy = "^1.19.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"

[tool.taskipy.tasks]
test = "nosetests"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
